--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -1,59 +1,63 @@
-.container{
-    height: 100px;
-    padding: 0px 50px;
-    background-color: rgb(235, 79, 8);
-    display : flex;
-    align-items: center;
-    justify-content: space-between;
-    position: sticky;
-    top: 0;
+.container {
+  height: 100px;
+  padding: 0px 50px;
+  background-color: #d1411e;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  position: sticky;
+  top: 0;
+  z-index: 999;
 }
 
-.item{
-    flex: 1;
-    display: flex;
-    align-items: center;
-
+.item {
+  flex: 1;
+  display: flex;
+  align-items: center;
 }
 
-.item:nth-child(2){
-    flex: 3;
-    
-}
-.item:last-child{
-    justify-content: flex-end;
-    
-}
-.callButton{
-    background-color: white;
-    border-radius: 50%;
-    padding: 10px;
-    width: 50px;
-    height: 50px;
-}
-.texts{
-    margin-left: 20px;
-    color: white;
-}
-.text:first-child{
-    font: 12px;
-    font-weight: 500;
-}
-.text:last-child{
-    font: 20px;
-    font-weight: bold;
-}
-.list{
-    padding: 0;
-    display: flex;
-    align-items: center;
-    list-style: none;
-    color: white;
+.item:nth-child(2) {
+  flex: 3;
 }
 
-.listItem{
-    margin: 20px;
-    font-weight: 500;
+.item:last-child {
+  justify-content: flex-end;
+}
+
+.callButton {
+  background-color: white;
+  border-radius: 50%;
+  padding: 10px;
+  width: 50px;
+  height: 50px;
+}
+
+.texts {
+  margin-left: 20px;
+  color: white;
+}
+
+.text:first-child {
+  font-size: 12px;
+  font-weight: 500;
+}
+
+.text:last-child {
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.list {
+  padding: 0;
+  display: flex;
+  align-items: center;
+  list-style: none;
+  color: white;
+}
+
+.listItem {
+  margin: 20px;
+  font-weight: 500;
 }
 
 .cart{
@@ -66,11 +70,11 @@
     right: -10px;
     width: 20px;
     height: 20px;
-    height: 20px;
     border-radius: 50%;
     background-color: white;
     padding: 3px;
     display: flex;
+    align-items: center;
     justify-content: center;
     font-weight: bold;
     color: orangered;
