--- a/styles/PizzaCard.module.css
+++ b/styles/PizzaCard.module.css
@@ -10,13 +10,13 @@
 }
 
 .title{
-    font-size: 19px;
+    font-size: 18px;
     font-weight: bold;
-    color: #574d4d;
+    color: #d1411e;
 }
 
 .price{
-    font-size: 19px;
+    font-size: 18px;
     font-weight: bold;
     color: #666;
 }
@@ -24,4 +24,19 @@
 .desc{
     text-align: center;
     color: #777;
+}
+
+@media screen and (max-width: 480px) {
+    .container{
+        width: 100%
+    }
+
+    .title{
+        font-size: 30px;
+    }
+
+    .price,
+    .desc{
+        font-size: 24px;
+    }
 }
